--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Gachon QR</string>
     <string name="login">Login</string>
+    <string name="id">ID</string>
+    <string name="password">Password</string>
 </resources>
