QR-10 LoginFragment 코드 최적화 및 자동 로그인

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="password">Password</string>
     <string name="invalud_account">Invalid Account</string>
     <string name="qr">QR</string>
+    <string name="click_to_refresh">Click to refresh.</string>
+    <string name="connect_internet">Connect Internet</string>
 </resources>
