--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,10 @@
     <string name="qr">QR</string>
     <string name="click_to_refresh">Click to refresh.</string>
     <string name="connect_internet">Connect Internet</string>
-    <string name="signout">SignOut</string>
     <string name="logout">Logout</string>
     <string name="ok">OK</string>
-    <string name="are_you_sure_you_want_to_logout">Are you sure you want to log out?</string>
+    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
     <string name="cancel">Cancel</string>
+    <string name="information">Information</string>
+    <string name="information_dialog_message">It does not store account information and is used for QR code generation.</string>
 </resources>
